Run scan-local.sh on geonetwork:...